--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/index.js": "/js/index.js",
-    "/css/app.css": "/css/app.css"
+    "/js/index.js": "/js/index.js?id=413b867a164678f36820",
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7"
 }
