--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "devDependencies": {
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
+        "@types/react-router-dom": "^5.1.8",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.37.0",
         "sass-loader": "^12.1.0",
