--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "postcss": "^8.1.14",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-query": "^3.19.1",
         "react-router-dom": "^5.2.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.37.0",
