--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^17.0.2",
         "react-query": "^3.19.1",
         "react-router-dom": "^5.2.0",
+        "react-toastify": "^7.0.4",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.37.0",
         "sass-loader": "^12.1.0",
