--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,14 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 indent_style = space
-indent_size = 4
 trim_trailing_whitespace = true
+
+[*.html]
+indent_size = 4
+
+[*.{js,ts,jsx,tsx}]
+indent_size = 2
+quote_type = single
 
 [*.md]
 trim_trailing_whitespace = false
